<resources>
    <string name="coinz">Coinz</string>
    <string name="login">LOGIN</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Enter your email here…</string>
    <string name="prompt_UUN">UUN</string>
    <string name="prompt_password">Enter your password here…</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_login">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="check_box_one">Remember me</string>
    <string name="logo">uoeLogo</string>
    <string name="login_page_close">Close</string>

    <!--mapbox token-->
    <string name="access_token">pk.eyJ1IjoibGF3aHkiLCJhIjoiY2puaTFtamk1MDRjYjNwczVsaDM3NzZ2byJ9.b0VaSeVWY14Ip6VIxk77CA</string>

    <!--mapview strings-->
    <string name="collect_button">COLLECT</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="sign_up_long">Don\'t have an account? Sign up</string>
    <string name="sign_in_long">Already have an account? Sign in</string>
    <string name="prompt_confirm">Confirm your password here…</string>

    <string name="icon">icon</string>
    <string name="list_local">The list of Local Coins</string>
    <string name="list_foreign">The list of Foreign Coins.</string>
    <string name="zero_num">0.000</string>
    <string name="peny">PENY</string>
    <string name="quid">QUID</string>
    <string name="dolr">DOLR</string>
    <string name="shil">SHIL</string>
    <string name="x_rate">X-Rate</string>
    <string name="value">Value</string>
    <string name="foreign">Foreign</string>
    <string name="local">Local</string>
    <string name="type">Type</string>
    <string name="gold">GOLD</string>
    <string name="worldwide">(worldwide)</string>
    <string name="test_test_com">(test@test.com)</string>
    <string name="lawrence">Lawrence</string>
    <string name="rank">Rank:</string>
    <string name="name">Name</string>
    <string name="email">email</string>
    <string name="user_email">Email</string>
    <string name="user_rank">Rank</string>
    <string name="type_here">Type here…</string>
    <string name="confirm">confirm</string>
    <string name="send">send</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="foreign_coins_requests">Foreign Coins Requests</string>
    <string name="gold_short">Gold</string>
    <string name="friend_list">Friend List</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="your_friend_s_name">Your Friend\'s name</string>
    <string name="cancel">Cancel</string>
    <string name="friend_gmail_com">friend@gmail.com</string>
    <string name="_3_15_characters">3–15 characters</string>
    <string name="friend_email_list">Friend Email List</string>
    <string name="check_map_update">Check Map Update…</string>
    <string name="scroll">scroll</string>
    <string name="an_invitation">An Invitation</string>
    <string name="click_here_to_know_more">Click here to know more…</string>
    <string name="peny_fab">PENY:</string>
    <string name="quid_fab">QUID:</string>
    <string name="fab_dolr">DOLR:</string>
    <string name="fab_shil">SHIL:</string>
    <string name="slash">\\</string>
    <string name="slash1">/</string>
    <string name="click_the_buttons_to_fill_in_the_coins">(Click the buttons to fill in the coins)</string>
    <string name="recipe">Recipe</string>
    <string name="about_the_alchemy_recipe">About the Alchemy Recipe</string>
    <string name="_1">1.</string>
    <string name="ratio_">Ratio:</string>
    <string name="ratio_description">A recipe would specify a combination of coins of the four types, e.g. SHIL: DOLR: QUID: PENY = 5: 3: 2: 4.</string>
    <string name="purity">Purity</string>
    <string name="purity_description">The average values of the coins affects the purity of the combination, and purity directly affects the success rate.</string>
    <string name="reward">Reward</string>
    <string name="ratio">Ratio</string>
    <string name="danger">Danger</string>
    <string name="danger_description">Alchemical refinement is dangerous, you may lose everything you throw into the crucible or become much richer.</string>
    <string name="reward_description">For a successful refinement, all the input coins would take the maximum value 10, and directly transformed to Gold with a high exchange rate. That is the reward.</string>
    <string name="hint">Hint</string>
    <string name="hint_description">Notice that refining high-value coins would be more reliable but less rewarding.</string>
    <string name="background_story">The Grandmaster Alchemist Mr.DarkBrew decides to share his lifetime study by providing his Alchemical recipes to you. \n With a small amount of Gold payment, you can purchase the recipe (with different level) and use the crucible to refine your coins, turning them into Gold whenever the requirement on the recipe is satisfied…</string>
    <string name="payment">Payment</string>
    <string name="payment_description">The payment (300, 500, 1000) varies with possible reward of the recipe (i.e. higher payment is more likely to give rewarding recipe).</string>
    <string name="update_user_s_data">Update User\'s Data…</string>
    <string name="menu_button_description">A menu button for you to navigate to other activities.</string>
    <string name="help_page">Help Page</string>
    <string name="friend_list_description">To the friend/ranking list.</string>
    <string name="my_account_description">To the personal account.</string>
    <string name="fake_alchemy_description">To Mr.DarkBrew\'s invitation of Alchemy.</string>
    <string name="friend_request_description">To the friend requests page.</string>
    <string name="collect_description">Collect button, sending nearest coin (within 25 meters) into the wallet.</string>
    <string name="to_the_help_page">To the help page.</string>
    <string name="get_it">Get IT.</string>
    <string name="noble_1000_gold">Noble (1000 Gold):</string>
    <string name="buy">Buy.</string>
    <string name="master_1000_gold">Master (1000 Gold)</string>
    <string name="expert_500_gold">Expert (500 Gold):</string>
    <string name="normal_300_gold">Normal (300 Gold):</string>
    <string name="select">Select</string>
    <string name="pay">Pay</string>
    <string name="value_">Value:</string>
    <string name="purity_100">Purity: 100%</string>
    <string name="purity_">Purity:</string>
    <string name="percent">%</string>
    <string name="_100">100</string>
    <string name="foreign_coins_list">Foreign Coins List</string>
    <string name="local_coins_list">Local Coins List</string>
    <string name="selected_0">Selected: 0</string>
    <string name="noting">Noting</string>
    <string name="refine">Refine</string>
    <string name="result_capital">RESULT</string>
    <string name="lose_description">You lose all the coins   thrown into the crucible!</string>
    <string name="recipe_store">Recipe Store</string>


</resources>
